<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="copyright">©Copyright 2014.</string>
    <string name="first1">i am cali your new health coach i will be guiding you to your new you.</string>
    <string name="first2">i will be here guiding you through your journey in a better life style. </string>
    <string name="first3"> You will have that perfect body you always dreamed of without skipping meals </string>
    <string name="first4">  You will have that perfect Health you always dreamed of without skipping meals  </string>
    <string name="form1">I am</string>
    <string name="form2">Men</string>
    
 <string name="doyou" >do you want to quit Cali ?</string>
    <string name="form3">Women</string>
    <string name="form4">I am</string>
    <string name="form5">ys</string>
    <string name="form6">I Measure</string>
    <string name="form7">Cm</string>
    <string name="form8">I Weigh</string>
    <string name="form9">Kg</string>
    <string name="form10">Confirm</string>
    <string name="cont1">Cali</string>
    <string name="cont2">Weight in</string>
    <string name="cont3">Log Book</string>
    <string name="cont4">Settings</string>
    <string name="cont5">About</string>
    <string name="cali1">Cali</string>
    <string name="cali2">Your Goal Weight</string>
    <string name="cali3">Log Your Diets</string>
    <string name="cali4"> of 5000 calories</string>
    <string name="cali5">Walk 450 Steps</string>
    <string name="cali6"> Steps</string>
    <string name="cali7">Tips This Week</string>
    <string name="cali8"> of 1750 calories</string>
    <string name="cali9">Walk 750 Steps</string>
    <string name="cali10"> of 630 calories</string>
    <string name="cali11">Walk 1520 Steps</string>
    <string name="cali12">Weight Set</string>
    <string name="cali13">Diet Logged</string>
    <string name="cali14">Tips Read</string>
    <string name="goal11">Goal Weight</string>
    <string name="goal12">What is your target weight?</string>
    <string name="goal13">Your healthy weight range</string>
    <string name="goal22">Choose your program intensity</string>
    <string name="goal23"> This will affect how hard your diet and exercise tasks get</string>
    <string name="goal2222"> Update Cali about your new weight</string>
    <string name="goal24">Easy</string>
    <string name="callogged"> cal logged</string>
    <string name="goal25">Average</string>
    <string name="goal26">Intense</string>
    <string name="log11">January</string>
    <string name="log12">February</string>
    <string name="log13">March</string>
    <string name="log14">April</string>
    <string name="log15">May</string>
    <string name="log16">June</string>
    <string name="log17">July</string>
    <string name="log18">August</string>
    <string name="log19">September</string>
    <string name="log191">October</string>
    <string name="log192">November</string>
    <string name="log193">December</string>
    <string name="log194">Log Your Diets</string>
    <string name="log195">Breakfast</string>
    <string name="log196">Morning Snack</string>
    <string name="log197">Lunch</string>
    <string name="log198">Afternoon Snack</string>
    <string name="log199">Dinner</string>
    <string name="log19991">Evening Snack</string>
    <string name="log19992">Today</string>
    <string name="log19993">Search By Name</string>
    <string name="final1">On</string>
    <string name="final2">Total</string>
    <string name="final3">check</string>
    <string name="next1">Next</string>
    <string name="stepsd1">I walked </string>
    <string name="stepsd2"> Steps Today on Cali</string>
    <string name="stepsd3">0 Calories</string>
    <string name="stepsd4"> Steps</string>
    <string name="stepsd5"> Calories</string>
    <string name="momo"> Cal Logged</string>
    <string name="stepsd6">Your Steps</string>
    <string name="stepsd7"> Steps This Week on Cali</string>
    <string name="stepsd8"> This Week</string>
    <string name="tips1"> Tips This Week</string>
    <string name="tips2">Ive read this</string>
    <string name="weight2">Weight in</string>
    <string name="aboutcali">im cali your new health coach.i will be guiding you to your new you.i will be here guiding you through your journey in a better life style.</string>
    <string name="myemail">chiheb.manai@esprit.tn</string>
    <string name="myemail2">manaichiheb02@gmail.com</string>
    <string name="emailk">karim.razouane@gmail.com</string>
    <string name="desc">google</string>
    <string name="emailk2">karim.razouane@esprit.tn</string>
    <string name="developed">Developed By</string>
    <string name="myname">Chiheb Manai</string>
    <string name="kname">Karim Razouane</string>
    <string name="app_name">Cali</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="prev">Previous</string>
    <string name="finish">Submit order</string>
    <string name="review">Review</string>
    <string name="activate">Activate Internet Connexion?</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">Email</string>
    <string name="hint_your_name">e.g. Larry</string>
    <string name="hint_your_email">Optional</string>
    <string name="app_id">347851265376283</string>
    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>
    
    <string name="pref_send_report">Set Email</string>
    <string name="pref_send_report_summary">Set your Email</string>
 

    <string name="pref_user_name">Set username</string>
    <string name="pref_user_name_summary">Set your username</string>
     
    <string name="pref_user_profile">User Profile</string>
    
     
  

</resources>