<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/abouut"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="70dp"
     android:background="@drawable/dialog_background" 
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop2"
        android:contentDescription="@string/desc"
        android:src="@drawable/logoapp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginBottom="@dimen/marginbottom2"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toRightOf="@+id/imageView2"
        android:fontFamily="sans-serif-light"
        android:text="@string/myname"
        android:textColor="#1E88E5"
        android:textSize="@dimen/textsize1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView01"
        android:layout_below="@+id/TextView01"
        android:fontFamily="sans-serif-light"
        android:text="@string/myemail" />

    <ImageView
        android:id="@+id/fb1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/go1"
        android:layout_marginLeft="@dimen/marginleft1"
        android:layout_toRightOf="@+id/TextView03"
        android:contentDescription="@string/desc"
        android:src="@drawable/flogo" />

    <ImageView
        android:id="@+id/fb2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/fb1"
        android:contentDescription="@string/desc"
        android:src="@drawable/flogo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/aboutcali"
        android:textAlignment="gravity"
        android:textSize="@dimen/textsize2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/developed"
        android:textColor="#1E88E5"
        android:textSize="@dimen/textsize3"
        android:textStyle="bold" />

    <com.andy.utils.RoundedImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/width3"
        android:layout_height="@dimen/height1"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="@dimen/margintop2"
        android:scaleType="centerCrop"
        android:src="@drawable/chi" />

    <TextView
        android:id="@+id/TextView06"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginbottom3"
        android:fontFamily="sans-serif-light"
        android:text="@string/copyright" />

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:fontFamily="sans-serif-light"
        android:text="@string/emailk" >
    </TextView>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/TextView03"
        android:layout_marginTop="15dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/kname"
        android:textColor="@color/blue"
        android:textSize="@dimen/textsize1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/imageView3"
        android:fontFamily="sans-serif-light"
        android:text="@string/emailk2" />

    <com.andy.utils.RoundedImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/width3"
        android:layout_height="@dimen/height1"
        android:layout_alignRight="@+id/imageView2"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="@dimen/margintop3"
        android:scaleType="centerCrop"
        android:src="@drawable/karim" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignTop="@+id/imageView3"
        android:fontFamily="sans-serif-light"
        android:text="@string/myemail2" />

    <ImageView
        android:id="@+id/go1"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignTop="@+id/TextView01"
        android:layout_toRightOf="@+id/textView3"
        android:contentDescription="@string/desc"
        android:src="@drawable/glogo" />

    <ImageView
        android:id="@+id/go2"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/TextView02"
        android:layout_alignLeft="@+id/go1"
        android:contentDescription="@string/desc"
        android:src="@drawable/glogo" />

</RelativeLayout>